# pinterest-rs

./: Cargo.toml
pinterest_login/: Cargo.toml
pinterest_login/src/: config_builder.rs  lib.rs  login_bot.rs
src/: lib.rs  login.rs  utils.rs
src/pinterest/: mod.rs
