[package]
name = "pinterest_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
async-std = "1.12.0"
pinterest_login = { path = "./pinterest_login" }

[workspace]
members = [
    "pinterest_login",
]
