[package]
name = "pinterest_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
urlencoding = "2"
url = "2"
thiserror = "1"
cfg-if = "1"

[dependencies.reqwest]
version = "0.11"
features = ["cookies"]

[dependencies.pinterest_login]
path = "./pinterest_login"
default-features = false
optional = true

[dependencies.async-std]
version = "1"
optional = true

[dependencies.tokio]
version = "1"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[features]
default = ["async-std-runtime", "login"]
async-std-runtime = ["async-std", "pinterest_login/async-std-runtime"]
tokio-runtime = ["tokio", "pinterest_login/tokio-runtime"]
login = ["pinterest_login"]
credentials = []
debug = ["log"]

[workspace]
members = [
    "pinterest_login",
]
