[package]
name = "pinterest_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromiumoxide = { version = "0.5", default-features = false }
async-std = { version = "1", optional = true }
tokio = { version = "1", optional = true }
futures = "0.3.28"
thiserror = "1"
async-trait = "0.1"
log = { version = "0.4", optional = true }

[features]
default = ["async-std-runtime"]
debug = ["log"]
async-std-runtime = ["async-std", "chromiumoxide/async-std-runtime"]
tokio-runtime = ["tokio", "chromiumoxide/tokio-runtime"]
